<resources>
    <string name="app_name">Blood Donation</string>
    <string name="app_logo">App Logo</string>
    <string name="app_moto">Dare To Donate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onBoarding1_txt">Find Blood Donors</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu tristique tristique quam in.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="onBoarding2_txt">Post A Blood Request</string>
    <string name="login_description">You can donate for ones in need and request blood if you need.</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="second_screen_description">If you need blood, you can post a blood request form so donors can help</string>
    <string name="first_screen_description">You can find blood donors with a matching blood type</string>

    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="blood_type">Blood Type</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="todo">TODO</string>
    <string name="donation_request">Donation Request</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>

    <!--    Profile Fragment Strings    -->
    <string name="profile">Profile</string>
    <string name="profile_pic_desc">User Profile Picture</string>
    <string name="donated">Donated</string>
    <string name="requested">Requested</string>
    <string name="available">Available to donate</string>
    <string name="help">Get help</string>
    <string name="sign_out">Sign out</string>
    <string name="invite">Invite a friend</string>
    <string name="edit_profile_btn_desc">Edit profile</string>

    <!--  Edit Profile Fragment Strings  -->
    <string name="edit_profile">Edit Profile</string>
    <string name="save_btn">Save</string>


    <string name="required">Required field</string>
    <string name="city">City</string>
    <string name="optional">(Optional)</string>
    <string name="hospital">Hospital</string>
    <string name="requested_successfully">Blood is successfully requested</string>
    <string name="name">Name</string>
</resources>