<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:padding="@dimen/_15sdp">
    <ImageView
        android:id="@+id/splash_logo"
        style="@style/Logo_style"
        app:tint="@color/pinky_red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_92sdp"
        android:layout_marginBottom="@dimen/_16sdp">
    </ImageView>

    <TextView
        android:id="@+id/donate_text"
        style="@style/Moto_style"
        android:text="@string/app_moto"
        android:textColor="@color/pinky_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_logo"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_77sdp">

    </TextView>

    <TextView
        android:id="@+id/login_description"
        style="@style/onBoarding_description"
        android:layout_marginStart="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_38sdp"
        android:text="@string/login_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donate_text" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        style="@style/button_style"
        android:text="@string/log_in"
        android:textColor="@color/pinky_red"
        android:background="@drawable/white_btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_description"
        android:layout_margin="@dimen/_20sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn"
        style="@style/button_style"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@drawable/red_btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:layout_margin="@dimen/_20sdp">

    </androidx.appcompat.widget.AppCompatButton>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>