<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F9F9F9"
        tools:context=".profile.ProfileFragment">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/edit_profile_btn_desc"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/edit_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
            android:contentDescription="@string/profile_pic_desc"
            android:src="@drawable/rectangle_27"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_text"
            tools:src="@drawable/rectangle_27" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Kevin Durant"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_pic"
            tools:text="Kevin Durant" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="@+id/user_location"
            app:layout_constraintEnd_toStartOf="@+id/user_location"
            app:layout_constraintTop_toTopOf="@+id/user_location" />

        <TextView
            android:id="@+id/user_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Brooklyn, New York"
            android:textAlignment="center"
            android:textColor="#7C7C7C"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            tools:text="Brooklyn, New York" />

        <LinearLayout
            android:id="@+id/user_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_location">





        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_info_layout">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_rect_shape"
                android:drawableStart="@drawable/available_btn"
                android:drawablePadding="12dp"
                android:fontFamily="@font/poppins_medium"
                android:minHeight="55dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/available"
                android:textColor="@color/grey_white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_rect_shape"
                android:drawableStart="@drawable/invite_btn"
                android:drawablePadding="12dp"
                android:fontFamily="@font/poppins_medium"
                android:minHeight="55dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/invite"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/grey_white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_rect_shape"
                android:drawableStart="@drawable/help_btn"
                android:drawablePadding="12dp"
                android:fontFamily="@font/poppins_medium"
                android:minHeight="55dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/help"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/grey_white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rect_shape"
                android:drawableStart="@drawable/sign_out_btn"
                android:drawablePadding="12dp"
                android:fontFamily="@font/poppins_medium"
                android:minHeight="55dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/sign_out"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/grey_white"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>